--- a/src/main/resources/application-form-flow-library-test.yaml
+++ b/src/main/resources/application-form-flow-library-test.yaml
@@ -3,3 +3,6 @@ spring:
     baselineOnMigrate: true
     placeholders:
       uuid_function: "random_uuid"
+  messages:
+    encoding: UTF-8
+    basename: messages,messages-form-flow
