--- a/src/main/resources/application-form-flow-library.yaml
+++ b/src/main/resources/application-form-flow-library.yaml
@@ -3,4 +3,5 @@ spring:
     placeholders:
       uuid_function: "gen_random_uuid"
   messages:
+    encoding: ISO-8859-1
     basename: messages, messages-form-flow
