Enable test-coverage deepsource integration
- Test coverage check runs only after tests pass on PRs

[#184827264]

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,8 +1,12 @@
 version = 1
 
+test_patterns = ["src/test"]
+
+[[analyzers]]
+name = "test-coverage"
+
 [[analyzers]]
 name = "java"
-enabled = true
 
-  [analyzers.meta]
-  runtime_version = "17"
+[analyzers.meta]
+runtime_version = "17"
