Moving default encoding to application properties (#170)
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: Cypress Borg <9101728+coltborg@users.noreply.github.com>

--- a/src/main/resources/application-form-flow-library-test.yaml
+++ b/src/main/resources/application-form-flow-library-test.yaml
@@ -3,3 +3,5 @@ spring:
     baselineOnMigrate: true
     placeholders:
       uuid_function: "random_uuid"
+  messages:
+    basename: messages, messages-form-flow
