--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,11 +16,17 @@ form-flow:
     path: 'src/test/resources/pdfs/'
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:test-schema-init.sql'
-    username: sa
-    password: sa
+    url: jdbc:postgresql://localhost:5432/form-flow-test
+    username: form-flow-test
+    password: postgres
+  flyway:
+    baselineOnMigrate: true
+    clean-on-validation-error: true
+    placeholders:
+      uuid_function: "gen_random_uuid"
+  messages:
+    encoding: ISO-8859-1
+    basename: messages, messages-form-flow
   jpa:
     hibernate:
       ddl-auto: create-drop
-  main:
-    allow-circular-references: true
