Add psql to gradle publish step
- Dont fail the build if deepsource doesnt work for whatever reason
- Dependabot test PRs can now read env variables, which is fine since they shouldn't ever require real creds

[#184056302]

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,6 +9,8 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
     services:
       postgres:
         image: postgres
@@ -51,6 +53,7 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Report results to DeepSource
+        continue-on-error: true
         if:  ${{ steps.test.conclusion == 'success' }}
         run: |
            curl https://deepsource.io/cli | sh
