--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,5 +1,5 @@
 form-flow:
-  path: 'flows-config.yaml'
+  path: 'test-flow.yaml'
   inputs: 'formflow.library.inputs.'
   uploads:
     accepted-file-types: '.jpeg, .fake, .heic, .tif, .tiff, .pdf'
