--- a/src/test/resources/flows-config/test-cross-validation-action.yaml
+++ b/src/test/resources/flows-config/test-cross-validation-action.yaml
@@ -1,5 +1,9 @@
 name: testFlow
 flow:
+  contactInfoPreference:
+    crossFieldValidationAction: CheckIndicatedContactMethodIsProvided
+    nextScreens:
+      - name: subflowEntry
   subflowEntry:
     nextScreens:
       - name: subflowIterationStart
