--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
-    id 'org.springframework.boot' version '2.7.10'
+    id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'java-library'
     id 'maven-publish'
@@ -43,6 +43,7 @@ repositories {
 }
 
 dependencies {
+    runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
@@ -53,7 +54,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.jetbrains:annotations:24.0.1'
-    implementation 'com.vladmihalcea:hibernate-types-55:2.21.1'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.3.1'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.flywaydb:flyway-core:9.16.3'
     implementation 'net.coobird:thumbnailator:0.4.19'
