Figured out how to rewire things so the tests worked. Renamed a few classes to make more sense.
Co-Authored-By: Ben Calegari; bcalegari@codeforamerica.org

--- a/src/test/resources/pdf-map.yaml
+++ b/src/test/resources/pdf-map.yaml
@@ -1,9 +1,9 @@
 flow: ubi
-pdf: Multipage-UBI-Form.pdf
+pdf: /pdfs/Multipage-UBI-Form.pdf
 inputs:
   firstName: APPLICANT_LEGAL_NAME_FIRST
 ---
 flow: test
-pdf: fake
+pdf: pdfs/fake
 inputs:
   whatever: fakeinput
