PDF Generation works in theory!
** stuff we gotta do **
- SingleField/OneToOne preparer
- Stop hardcoding in PdfMapFactory

** less useful tangents **
- Totaly fake PDF that isnt tied to ubi for testing
- Snakeyaml properties to make better pdf config object
- Constantize submittedAt/submissionId fields in DocumentFieldPreparers

--- a/src/test/resources/pdf-map.yaml
+++ b/src/test/resources/pdf-map.yaml
@@ -1,7 +1,8 @@
 flow: ubi
-pdf: /pdfs/Multipage-UBI-Form.pdf
+pdf: pdfs/ubi/Multipage-UBI-Form.pdf
 inputs:
   firstName: APPLICANT_LEGAL_NAME_FIRST
+  city: APPLICANT_CITY
 ---
 flow: test
 pdf: pdfs/fake
