--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.364'
     implementation 'com.smartystreets.api:smartystreets-java-sdk:3.13.15'
     implementation 'org.apache.pdfbox:pdfbox:2.0.+'
+    implementation 'org.yaml:snakeyaml:2.0'
 
     compileOnly 'org.projectlombok:lombok'
 
