--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -19,6 +19,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/form-flow-test
     username: form-flow-test
     password: postgres
+    hikari:
+      maximum-pool-size: 2
   flyway:
     baselineOnMigrate: true
     clean-on-validation-error: true
