Allow flyway clean to happen in tests
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -27,6 +27,7 @@ spring:
     clean-on-validation-error: true
     placeholders:
       uuid_function: "gen_random_uuid"
+    clean-disabled: false
   messages:
     encoding: ISO-8859-1
     basename: messages, messages-form-flow
