--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          path: main
       - name: Set up JDK
         uses: actions/setup-java@v3.5.0
         with:
@@ -45,6 +46,13 @@ jobs:
       - name: Test with Gradle
         id: test
         run: ./gradlew clean test --stacktrace
+      - name: Checkout Starter App repo
+        uses: actions/checkout@v2
+        with:
+          repository: codeforamerica/formflow-starter-app
+          path: starter-app
+      - name: Test Starter App
+        run: cd starter-app && ./gradlew clean test --stacktrace
       - name: Announce failures on Slack
         if:  ${{ steps.test.conclusion == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
