--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,10 +42,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: cd main && chmod +x gradlew
       - name: Test with Gradle
         id: test
-        run: ./gradlew clean test --stacktrace
+        run: cd main && ./gradlew clean test --stacktrace
       - name: Checkout Starter App repo
         uses: actions/checkout@v2
         with:
