--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -52,7 +52,7 @@ jobs:
           repository: codeforamerica/form-flow-starter-app
           path: starter-app
       - name: Test Starter App
-        run: cd starter-app && SPRING_PROFILES_ACTIVE=dev ./gradlew clean test --stacktrace
+        run: cd starter-app && SPRING_PROFILES_ACTIVE=dev SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/form-flow-test ./gradlew clean test --stacktrace
       - name: Announce failures on Slack
         if:  ${{ steps.test.conclusion == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
