--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          path: main
+          path: form-flow
       - name: Set up JDK
         uses: actions/setup-java@v3.5.0
         with:
@@ -42,7 +42,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
-        run: cd main && chmod +x gradlew
+        run: cd form-flow && chmod +x gradlew
       - name: Test with Gradle
         id: test
 #        run: cd main && ./gradlew clean test --stacktrace
