--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -57,9 +57,9 @@ jobs:
         run: |
           export SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/form-flow-test
           export SPRING_DATASOURCE_USERNAME=form-flow-test
-          export SPRING_DATASOURCE_PASSWORD=postgres
           export USE_LOCAL_LIBRARY=true
-          cd starter-app && ./gradlew clean test --stacktrace
+          cd starter-app
+          ./gradlew clean test --stacktrace
       - name: Announce failures on Slack
         if:  ${{ steps.test.conclusion == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
