--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Test Starter App
         run: |
           export SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/form-flow-test
+          export SPRING_DATASOURCE_USERNAME=form-flow-test
           export USE_LOCAL_LIBRARY=true
           cd starter-app
           ./gradlew clean test --stacktrace
