--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,7 +45,7 @@ jobs:
         run: cd form-flow && chmod +x gradlew
       - name: Test with Gradle
         id: test
-        run: cd main && ./gradlew clean test --stacktrace
+        run: cd form-flow && ./gradlew clean test --stacktrace
       - name: Checkout Starter App repo
         uses: actions/checkout@v2
         with:
