--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -14,6 +14,7 @@ form-flow:
       license: "license"
   pdf:
     path: 'src/test/resources/pdfs/'
+    map-file: 'pdf-map.yaml'
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/form-flow-test
