Add test of currentSubflowItem

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -18,6 +18,10 @@ flow:
   testAddressVerification:
     nextScreens:
       - name: test
+  subflowAddItem:
+    subflow: testSubflow
+    nextScreens:
+      - name: test
   test:
     nextScreens:
       - name: success
