--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,11 +42,11 @@ jobs:
             ${{ runner.os }}-gradle-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Test + Jar with Gradle
+      - name: Test with Gradle
         id: test
         run: ./gradlew clean test --stacktrace
       - name: Announce failures on Slack
-        if:  ${{ steps.test.conclusion == 'failure'}}
+        if:  ${{ steps.test.conclusion == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
         with:
           status: ${{ job.status }}
