Subflows can use conditions for navigation
[#185092525]

Co-authored-by: Tom Dooner <tdooner@codeforamerica.org>

--- a/src/test/resources/flows-config/test-conditional-navigation.yaml
+++ b/src/test/resources/flows-config/test-conditional-navigation.yaml
@@ -14,6 +14,12 @@ flow:
     nextScreens:
       - name: first
       - name: last
+  fourth:
+    subflow: testSubflow
+    nextScreens:
+      - name: first
+      - name: last
+        condition: SubflowCondition
   other:
     nextScreens:
       - name: first
@@ -21,3 +27,8 @@ flow:
       - name: last
   last:
     nextScreens: null
+subflows:
+  testSubflow:
+    iterationStartScreen: fourth
+    deleteConfirmationScreen: other
+    reviewScreen: third
