--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ plugins {
     id 'signing'
 }
 
+jacoco {
+    toolVersion = '0.8.10'
+}
+
 targetCompatibility = JavaVersion.VERSION_17
 sourceCompatibility = JavaVersion.VERSION_17
 
