Fix subflow after action test

--- a/src/test/resources/flows-config/test-after-save-action.yaml
+++ b/src/test/resources/flows-config/test-after-save-action.yaml
@@ -8,7 +8,7 @@ flow:
     nextScreens:
       - name: subflowIterationStart
   subflowIterationStart:
-    afterSaveAction: SendEmailAfterSaveSubflow
+    afterSaveAction: SendEmailAfterSave
     subflow: income
     nextScreens:
       - name: next
