Allow for null subflowInfo and dbFields in pdf-map.yaml

--- a/src/test/resources/pdf-map.yaml
+++ b/src/test/resources/pdf-map.yaml
@@ -7,11 +7,13 @@ inputFields:
     phone: PHONE
     email: EMAIL
 dbFields:
-subflowInfo:
----
-flow: test
-pdf: pdfs/fake
-inputFields:
-  whatever: FAKE_INPUT
-dbFields:
   submittedAt: SUBMITTED_AT_DATE
+#subflowInfo:
+#  householdAndIncome:
+#    totalIterations: 5
+#    dataAction: PdfSubflowHouseholdAndIncomeDataAction
+#    subflows:
+#      - income
+#      - household
+#    fields:
+#      householdMemberFirstName: LEGAL_NAME_FIRST_MEMBER
