Use a build cache locally for Gradle
- Cuts down the time it takes to re-`jar` the library when doing local development!

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,10 @@
 
 rootProject.name = "formflow-library"
 include("lib")
+
+buildCache {
+    local {
+        directory = new File(rootDir, 'build-cache')
+        removeUnusedEntriesAfterDays = 30
+    }
+}
