--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'org.apache.pdfbox:pdfbox:2.0.28'
     implementation 'org.yaml:snakeyaml:2.0'
     implementation 'com.mailgun:mailgun-java:1.0.8'
+    implementation 'com.google.crypto.tink:tink:1.9.0'
 
     compileOnly 'org.projectlombok:lombok'
 
