--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -44,8 +44,8 @@ jobs:
         uses: peter-evans/repository-dispatch@v2.1.1
         with:
           repository: codeforamerica/form-flow-starter-app
-          event-type: form-flow-published
-          token: ${{ secrets.STARTER_APP_GITHUB_PAT }}
+          event-type: form-flow-snapshot-updated
+          token: ${{ secrets.PLATFORM_ROBOT_PAT }}
       - name: Announce on Slack
         if: failure()
         uses: ravsamhq/notify-slack-action@v2
