--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -7,12 +7,12 @@ on:
         type: string
         required: true
 jobs:
-  run-tests:
-    name: Run tests
-    uses: ./.github/workflows/run-tests.yml
+#  run-tests:
+#    name: Run tests
+#    uses: ./.github/workflows/run-tests.yml
   create-pre-release:
     name: Create Pre-Release
-    needs: run-tests
+#    needs: run-tests
     runs-on: ubuntu-latest
     steps:
       - name: Tag Version
@@ -23,7 +23,7 @@ jobs:
       - name: Draft Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{inputs.version}
+          tag_name: ${{inputs.version}}
           generate_release_notes: true
           body: |
             FILL IN DETAILS ABOUT THIS RELEASE!
