--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -15,10 +15,14 @@ jobs:
 #    needs: run-tests
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Tag Version
         run: |
           echo Creating pre-release version: ${{inputs.version}}
-          git tag ${{inputs.version}}
+          git config --local user.email "bcalegari+platforms-robot@codeforamerica.org"
+          git config --local user.name "CfA Platforms Robot"
+          git tag -a ${{inputs.version}} -m "Pre-release version ${{inputs.version}}"
           git push origin ${{inputs.version}}
       - name: Draft Release
         uses: softprops/action-gh-release@v1
