--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,16 +64,22 @@ jobs:
         run: | # switch out inputs.version with latest release when you're done testing!
           echo "Updating version in build.gradle to ${{ inputs.version }}"
           sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}"/' build.gradle
-      - name: Use faketty to allow for GPG signing
-        uses: Yuri6037/Action-FakeTTY@v1.1
+#      - name: Use faketty to allow for GPG signing
+#        uses: Yuri6037/Action-FakeTTY@v1.1
       - name: Publish to Sonatype
         run: |
-          echo "SONATYPE_USERNAME=${{ inputs.sonatypeUsername }}" >> $GITHUB_ENV
-          echo "SONATYPE_PASSWORD=${{ inputs.sonatypePassword }}" >> $GITHUB_ENV
-          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
-          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-          echo "${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" | gpg --batch --pinentry-mode loopback --passphrase-fd 0 --import private_key.asc
-          ./gradlew publish
+#          echo "SONATYPE_USERNAME=${{ inputs.sonatypeUsername }}" >> $GITHUB_ENV
+#          echo "SONATYPE_PASSWORD=${{ inputs.sonatypePassword }}" >> $GITHUB_ENV
+#          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
+#          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
+#          echo "${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" | gpg --batch --pinentry-mode loopback --passphrase-fd 0 --import private_key.asc
+          ./gradlew publish --no-daemon --no-parallel
+        env:
+          ORG_GRADLE_PROJECT_VERSION_NAME: ${{ github.event.inputs.versionName }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ inputs.sonatypeUsername }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ inputs.sonatypePassword }}
 #          ./gradle closeStagingRepository
 #          ./gradle promoteStagingRepository
 
